Apply workaround for JDK-8329528